syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package commentpb;

service CommentAPI {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
    rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
}

message Comment {
	string UUID = 1;
	string message = 2;
	string userUUID = 3;
	string parentCommentUUID = 4;
	google.protobuf.Timestamp createdAt = 5;
	google.protobuf.Timestamp updatedAt = 6;
	google.protobuf.Timestamp deletedAt = 7;
}

message GetRequest {
    string UUID = 1;
}

message GetResponse {
    Comment comment = 1;
}

message SetRequest {
	Comment comment = 1;
}

message SetResponse {
	string UUID = 1;
}

message UpdateRequest {
	Comment comment = 1;
}

message DeleteRequest {
    string UUID = 1;
}
